--- a/9_FriendFilter/main.css
+++ b/9_FriendFilter/main.css
@@ -71,7 +71,8 @@
     overflow: hidden;
 }
 
-.app__list {
+.app__list,
+.app__sorted__list {
     margin: 0 15px 0 15px;
     padding: 0;
     list-style-type: none;
@@ -84,8 +85,9 @@
     width: 100%;
     position: relative;
 }
+
 .app__list__item:last-child {
-	margin: 0 0 38px 0;
+    margin: 0 0 38px 0;
 }
 
 .app__list__heading {
@@ -122,11 +124,6 @@
 
 .app__sorted__list__heading {
     margin: 14px 0 0 15px;
-}
-
-.app__sorted__list {
-    list-style-type: none;
-    padding: 0;
 }
 
 .app__footer {
